# vpn-doctor

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES_SPRINT0_DOCUMENTATION.md  CONTRIBUTING.md  README.md  ROADMAP.md  SPRINT1_CORE_FILES.md  SPRINT2_2_IMPLEMENTATION_REPORT.md  SPRINT2_3_IMPLEMENTATION_REPORT.md  SPRINT2_3_TEST_RESULT.txt  SPRINT2_4_IMPLEMENTATION_REPORT.md  SPRINT2_4_TEST_RESULT.txt  commit_sprint0_docs.sh  pyproject.toml
.github/workflows/: python.yml
docs/: FEATURES.md  FORTINET_CASE_STUDY.md  INDEX.md  NEXT_STEPS.md
docs/adr/: 0001-project-vision.md  0002-gtk4-libadwaita.md  0002-use-python.md  0003-openfortivpn-first.md  0003-use-gtk4-libadwaita.md  0004-diagnostics-first.md  0004-gettext.md  0004-openfortivpn-first.md  0005-keyring.md  0005-secret-storage.md  0005-use-gettext.md  0006-cli-first-during-early-sprints.md  0006-use-secret-service.md  0007-layered-architecture.md  0008-documentation-first.md
docs/case-studies/: fortinet-ssl-vpn-fedora.md
docs/development/: AI_GUIDELINES.md  ARCHITECTURE_GUIDE.md  BACKEND_GUIDELINES.md  BRANDING_GUIDE.md  (+15 more)
po/: fr.po  vpn-doctor.pot
tests/: test_backend_registry.py  test_cli_sprint22.py  test_cli_sprint23.py  test_cli_sprint24.py  test_log_parser.py  test_openfortivpn_process.py  test_openfortivpn_wait.py  test_secret_service.py  test_settings_service.py  test_state_machine.py  test_ui_view_models.py
vpn-doctor/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SPRINT2_1_IMPLEMENTATION_REPORT.md  SPRINT2_REVIEW_REPORT.md  setup_project_base.sh
(+83 files in other folders)
